# aax-midi

./: CMakeLists.txt  ChangeLog  INSTALL  description
CMakeModules/: CPack_Defaults.cmake  CPack_Modules.cmake  FindXML.cmake  package.cmake
admin/: aaxplaymidi.1.in
admin/debian/: copyright
base/: CMakeLists.txt  types.h
include/: cmake_config.h.in
include/aax/: byte_stream.hpp  instrument  midi.h
midi/: CMakeLists.txt  TODO  driver.cpp  driver.hpp  ensemble.cpp  ensemble.hpp  file.cpp  file.hpp  gmmidi.cpp  gsmidi.cpp  instrument.cpp  instrument.hpp  midi.cpp  shared.hpp  stream.cpp  stream.hpp  xgmidi.cpp
src/: CMakeLists.txt  aaxplaymidi.cpp  drawbar2aaxs.c  driver.c  driver.h
test/: CMakeLists.txt  testensemble++.cpp  testinstrument++.cpp
utils/: AL2aaxs.c  CMakeLists.txt  EAX2aaxs.c  GM2aaxs.c  GM2inst.c  GM2inst.cpp  GS2aaxs.c  GSinst.c  GSinst.cpp  MT32inst.c  MT32inst.cpp  XG2aaxs.c  XGinst.c  XGinst.cpp  canonical_names.cpp  canonical_names.hpp  common.c  common.h  inst_list.cpp  mkdrums.cpp  mkinst.cpp  testgmmidi.c
utils/AL/: efx.h
utils/EAX/: efx-presets.h
