
set(LIBBASE base)
set(LIBDRIVER driver)

FUNCTION(CREATE_CPP_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBDRIVER} ${LIBBASE} ${AAX_LIBRARY} ${EXTRA_LIBS} ${XML_LIBRARY})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()


CREATE_CPP_TEST(testinstrument++)
CREATE_CPP_TEST(testensemble++)
