

set(LIBDRIVER driver)

set( NAMES_OBJS
     canonical_names.cpp
   )

set(LIBTYPE STATIC)

set(LIBNAMES names)
ADD_LIBRARY(${LIBNAMES} ${LIBTYPE} ${NAMES_OBJS})


set(EXTRA_LIBS "${EXTRA_LIBS} -lzeroxml")

FUNCTION(CREATE_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBDRIVER} ${AAX_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
ENDFUNCTION()

FUNCTION(CREATE_CPP_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBNAMES} ${LIBDRIVER} ${AAX_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
ENDFUNCTION()

CREATE_CPP_TEST(inst_list)
CREATE_CPP_TEST(MT32inst)
CREATE_CPP_TEST(GM2inst)
CREATE_CPP_TEST(GSinst)
CREATE_CPP_TEST(XGinst)

CREATE_TEST(XG2aaxs)
CREATE_TEST(testgmmidi)
